[package]
name = "sat-solver"
version = "0.1.0"
authors = ["Bobbie Soedirgo <bobbie@soedirgo.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
num-rational = "0.2.4"
ordered-float = "1.0.2"
priority-queue = "0.7.0"
